<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"  >

    <item
	    android:id="@+id/overflow"
	    android:orderInCategory="100"
	    android:icon="@drawable/ic_action_overflow"
	    android:title="@string/menu_menu"
	    android:showAsAction="always">
	    <menu>
	        <item
	            android:id="@+id/action_fill"
	            android:title="@string/menu_auto_fill" />
	        <item
	            android:id="@+id/action_delete_all"
	            android:title="@string/menu_remove_all" />
	    </menu>
    </item>
    <item
        android:id="@+id/action_next"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_next_item"
        android:title="@string/menu_continue"        
        android:showAsAction="always" />

</menu>
